# linktree

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  rebuild.sh
backend/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/.omc/: project-memory.json
backend/.omc/sessions/: 02925dce-01a4-4c4c-8738-b2e208ec53e7.json  03febcd6-b8d9-4bad-af98-daf39e340fcf.json  4bfa1dac-d429-4fa3-852d-e82c002a26c7.json  78ca31cb-5d8d-465b-bd29-5f8685471e0b.json  c08b8bb0-b99b-4cd8-81fb-d27d07ac737a.json  ca6776a6-83be-4510-9c43-1898625ae12e.json  d8afe232-7afa-4d61-8329-6fb592146a0b.json
backend/.omc/state/: agent-replay-02925dce-01a4-4c4c-8738-b2e208ec53e7.jsonl  agent-replay-817f1b81-bd66-440f-8991-294d2b88ff4a.jsonl  agent-replay-ffde1e9a-0d90-43bf-b95e-830f4e6349ce.jsonl  hud-state.json  last-tool-error.json  subagent-tracking.json
backend/alembic/: CLAUDE.md  env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_links_table.py  003_create_analytics_tables.py  004_add_link_description_thumbnail.py  005_add_social_links_to_users.py  007_add_link_type.py  (+4 more)
backend/app/: CLAUDE.md  __init__.py  main.py
backend/tests/: conftest.py  test_graphql_analytics.py  test_graphql_auth.py  test_graphql_links.py  test_graphql_profile.py  test_link_features.py  test_link_type.py  test_misc_coverage.py  test_public.py  test_schemas_link.py  test_services_analytics.py  test_services_auth.py  test_services_link.py  test_services_profile.py  test_services_security.py
(+234 files in other folders)
